# osmgeojson-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: osmgeojson-python-conventions.instructions.md
src/osmgeojson/: __init__.py  _http.py  _pagination.py  async_client.py  chunking.py  cli.py  client.py  convenience.py  models.py  output.py  retry.py
tests/: .env.example  README.md  conftest.py  test_async_client.py  test_chunking.py  test_cli.py  test_client.py  test_output.py  test_pagination.py  test_retry.py
tests/example_apps/: conftest.py  graph_utils.py  test_bike_path_dijkstra_liljeholmen_to_djurgarden.py  test_city_cycling_infrastructure.py  test_cycling_trails.py  test_lakeside_ice_cream_hunt.py  test_park_bench_finder.py  test_park_explorer.py  test_pedestrian_shortest_path.py  test_pedestrian_wavefront_bfs.py  test_restaurant_guide.py
