[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osmgeojson"
version = "0.1.0"
description = "Python SDK for the MapLark OSM GeoJSON API to query OpenStreetMap data easily."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openstreetmap", "osm", "geojson", "geospatial", "maplark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "httpx>=0.27",
    "click>=8.1",
    "geojson>=3.0",
]

[project.optional-dependencies]
geo = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
]
all = ["pandas>=2.0", "geopandas>=0.14", "shapely>=2.0"]
test = [
    "pytest>=7.0",
    "responses>=0.25",
    "pytest-asyncio>=0.23",
    "networkx>=3.0",
    "haversine>=2.8",
    "python-dotenv>=1.0",
]

[project.scripts]
osmgeojson = "osmgeojson.cli:cli"

[project.urls]
Homepage = "www.maplark.com"
Repository = "https://github.com/MapLark/osmgeojson-python"

[tool.hatch.build.targets.wheel]
packages = ["src/osmgeojson"]
include = ["src/osmgeojson/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
strict = true
